# commons

./: .gitignore  .gitmodules  README.md  commands.py  exceptions.py  input_streams.py  mitigations.py  outcomes.py  process.py  pyproject.toml  weaknesses.py
commons/: arguments.py  binary.py  commands.py  exploit.py  folder_watcher.py  iexecutable.py  input_streams.py  manuals.py  mitigations.py  outcomes.py  payload.py  process.py  proof_of_vulnerability.py  sensitive_functions.py  weaknesses.py
commons/ghidra/: __init__.py  ghidra.py
commons/ghidra/scripts/: decompile_function.py  extract_calls.py
commons/qbdi/: Dockerfile.qbdi_docker  qbdi.py
tests/: test_mitigations.py  test_process.py
