[tool.poetry]
name = "commons"
version = "0.1.0"
description = "Implementation of common functionality, enums and interfaces for multiple CRS modules"
authors = ["George-Andrei Iosif <hi@iosifache.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pwntools = "^4.10.0"
docker = "^5.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
