[tool.poetry]
name = "commons"
version = "0.1.0"
description = "Implementation of common functionality, enums and interfaces for multiple CRS modules"
authors = ["George-Andrei Iosif <hi@iosifache.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pwntools = "^4.10.0"
docker = "^6.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
